hackernews_tim/tests/snapshots/help_view__search_view_help.snap
---
source: hackernews_tim/tests/help_view.rs
expression: "render_help::<SearchView>()"
---


















               ┌──────────────────────────────────────────────┤ Help Dialog ├───────────────────────────────────────────────┐
               │ Switch Mode                                                                                                │
               │ esc Switch to navigation mode                                                                              │
               │ i   Switch to search mode                                                                                  │
               │                                                                                                            │
               │ Navigation Mode - Story navigation                                                                         │
               │ [j, down]    Focus the next story                                                                          │
               │ [k, up]      Focus the previous story                                                                      │
               │ {story_id} g Focus the {story_id}-th story                                                                 │
               │                                                                                                            │
               │ Navigation Mode - Paging/Filtering                                                                         │
               │ n Go to the next page                                                                                      │
               │ p Go the previous page                                                                                     │
               │ d Cycle story sort mode                                                                                    │
               │                                                                                                            │
               │ Navigation Mode - Links                                                                                    │
               │ o Open in browser the focused story's article                                                              │
               │ O Open in article view the focused story's article                                                         │
               │ s Open in browser the focused story                                                                        │
               │                                                                                                            │
               │ View navigation                                                                                            │
               │ enter            Go to the comment view associated with the focused story                                  │
               │ [backspace, C-p] Go to the previous view                                                                   │
               │ C-s              Go to search view                                                                         │
               │ f1               Go to front page view                                                                     │
               │ f2               Go to all stories view                                                                    │
               │ f3               Go to ask HN view                                                                         │
               │ f4               Go to show HN view                                                                        │
               │ f5               Go to jobs view                                                                           │
               │ f6               Go to your comments view (requires authentication)                                        │
               │                                                                                                            │
               │ Others                                                                                                     │
               │ v        Toggle upvoting the focused story                                                                 │
               │ V        Toggle downvoting the focused story (requires downvote privilege)                                 │
               │ !        Toggle vouching for the focused story (dead stories only, requires vouch privilege)               │
               │ [/, C-f] Navigation mode only — Find on page: highlight matching stories (enter jumps to next, esc clears) │
               │ n        Navigation mode only — Jump to next find match (when a find session is active)                    │
               │ N        Navigation mode only — Jump to previous find match (when a find session is active)                │
               │ ?        Open the help dialog                                                                              │
               │ T        Open your comments on Hacker News in browser (requires authentication)                            │
               │ [q, C-c] Quit the application                                                                              │
               │ esc      Close a dialog                                                                                    │
               │                                                                                                            │
               └────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
